<resources>
    <string name="app_name">Nav.In</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configurações</string>
    <string name="hello">Hello</string>
    <string name="prompt_username">Username</string>
    <string name="action_about">Sobre</string>
    <string name="startOperation">Start operation</string>
    <string name="stopOperation">Stop operation</string>
    <string name="synchronize">Sincronizar</string>
    <string name="title_activity_settings">Configurações</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_tab">Nav.In</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main_tab">Nav.In</string>
    <string name="action_location_found">Location</string>
    <string name="action_refresh">Refresh</string>
    <string name="compass_dial">Compass dial</string>
    <string name="compass_hands">Compass hands</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="title_activity_free_nav">Nav.In</string>
    <string name="action_addroute">Adicionar Rota Personalizada</string>
    <string name="action_save">Salvar</string>
    <string name="action_tuto">Tutorial</string>
    <string name="action_clear">Limpar Rotas Personalizadas</string>
    <string name="voltar_inicial">Voltar à página inicial</string>
</resources>
