<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="guilherme.krzisch.com.mybeaconclient.view.MainTabActivity">

    <!-- Refresh -->
    <item android:id="@+id/action_addroute"
        android:icon="@drawable/ic_action_add_to_queue"
        android:title="@string/action_addroute"
        app:showAsAction="always" />

    <item android:id="@+id/action_tuto"
        android:title="@string/action_tuto"
        android:icon="@drawable/ic_action_about"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_action_about"
        app:showAsAction="never"/>

</menu>
